src/view/browser/render/snapshots/nifi_lens__view__browser__render__rpg__snapshots__rpg_identity_invalid_with_errors.snap
---
source: src/view/browser/render/rpg.rs
expression: out
---
"┌ MyRemoteSink · remote process group · Not Transmitting ──────────────────────────────────────────────────────────────┐"
"│┌ Identity ──────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││name                MyRemoteSink                 loading…                                                           ││"
"││parent group        pg-1                                                                                            ││"
"││target uri          https://nifi-east:8443/nifi                                                                     ││"
"││target secure       yes                                                                                             ││"
"││transport protocol  HTTP                                                                                            ││"
"││transmission        Not Transmitting                                                                                ││"
"││validation          INVALID                                                                                         ││"
"││  • Target URI is not reachable                                                                                     ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Input ports ──────────────────────────────────────────────────────────────────────────────────────────────────── 0 ┐│"
"││(no input ports)                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Output ports ─────────────────────────────────────────────────────────────────────────────────────────────────── 0 ┐│"
"││(no output ports)                                                                                                   ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
