src/view/browser/render/snapshots/nifi_lens__view__browser__render__rpg__snapshots__rpg_output_ports_focused_row_0.snap
---
source: src/view/browser/render/rpg.rs
expression: out
---
"┌ MyRemoteSink · remote process group · Transmitting ──────────────────────────────────────────────────────────────────┐"
"│┌ Identity ──────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││name                MyRemoteSink                 loading…                                                           ││"
"││parent group        pg-1                                                                                            ││"
"││target uri          https://nifi-east:8443/nifi                                                                     ││"
"││target secure       yes                                                                                             ││"
"││transport protocol  HTTP                                                                                            ││"
"││transmission        Transmitting                                                                                    ││"
"││validation          VALID                                                                                           ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Input ports ──────────────────────────────────────────────────────────────────────────────────────────────────── 2 ┐│"
"││NAME                                     STATE    TASKS COMMENTS                                                    ││"
"││ingest                                   RUNNING  4                                                                 ││"
"││events                                   STOPPED  1                                                                 ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┏ Output ports ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 2 ┓│"
"│┃NAME                                     STATE    TASKS COMMENTS                                                    ┃│"
"│┃errors                                   RUNNING  2                                                                 ┃│"
"│┃deadletter                               STOPPED  1                                                                 ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
