src/view/browser/render/snapshots/nifi_lens__view__browser__render__rpg__snapshots__rpg_sparkline_wide.snap
---
source: src/view/browser/render/rpg.rs
expression: out
---
"┌ MyRemoteSink · remote process group · Transmitting ──────────────────────────────────────────────────────────────────┐"
"│┌ Identity ──────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││name                MyRemoteSink                 recv  ▁▁▁▂▂▃▃▄▄▅▅▆▆▇▇█▁▁▁▂▂▃▃▄▄▅▅▆▆▇▇█▁▁▁▂▂▃▃▄ peak 75             ││"
"││parent group        pg-1                         sent  ▁▁▁▂▂▂▃▃▃▄▄▅▅▅▆▆▆▇▇█▁▁▁▂▂▂▃▃▃▄▄▅▅▅▆▆▆▇▇█ peak 57             ││"
"││target uri          https://nifi-east:8443/nifi  threads ▁▃▅█▁▃▅█▁▃▅█▁▃▅█▁▃▅█▁▃▅█▁▃▅█▁▃▅█▁▃▅█▁▃▅█ peak 6            ││"
"││target secure       yes                                                                                             ││"
"││transport protocol  HTTP                                                                                            ││"
"││transmission        Transmitting                                                                                    ││"
"││validation          VALID                                                                                           ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Input ports ──────────────────────────────────────────────────────────────────────────────────────────────────── 1 ┐│"
"││NAME                                     STATE    TASKS COMMENTS                                                    ││"
"││ingest                                   RUNNING  4                                                                 ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Output ports ─────────────────────────────────────────────────────────────────────────────────────────────────── 0 ┐│"
"││(no output ports)                                                                                                   ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
